--- a/ACS.html
+++ b/ACS.html
@@ -331,7 +331,7 @@
     <!--TENTH SECTION-->
     <section class="ACS-section-10">
         <div class="ACS-all-section-heading-bold">
-            <h2>We are the best ACS Program</h2>
+            <h2>Register now and stay ahead</h2>
         </div>
         <p>It's high time to build your profile and get admitted to your dream school if you're planning to pursue your
             MBA/ MIM/ Masters/ PHD in 2023! Why wait? Register with us to reach out to you and understand your career
@@ -340,9 +340,17 @@
     </section>
     <!--ELEVENTH SECTION-->
     <section class="ACS-section-11">
-        <input type="text" requried>
-        <input type="Email" requried>
-        <input type="phone Number" requried>
+        <div class="ACS-section-11-divided">
+            <form method="post">
+                <div class="ACS-section-11-divided-part">
+                    <input type="text" placeholder="Name" requried>
+                    <!-- <input type="text" placeholder="Name" requried> -->
+                    <input type="Email" placeholder="Email" requried>
+                    <input type="phone Number" placeholder="phone" requried>
+                </div>
+                <button>Build my Application</button>
+            </form>
+        </div>
     </section>
     <footer>
         <p>© 2022 CareerLabs Technologies Pvt Ltd</p>
